# tapestry-tools

./: .env  .gitignore  AGENTS.md  README.md  pyproject.toml
experiments/: ASM-loci.bed  ASM-loci.meth.bed  Akbari2023CellGenomics.csv  b.ipynb  benchmark-tapestry.1.ipynb  control_intervals_methylation.csv  correlate_methylation_with_haplotypes.py  expected-patterns-of-methylation-across-samples.ipynb  find_unique_and_common_records.py  how-to-read-tapestry-output.ipynb  imprinted_meth_all_samples.bed  imprinting.1.ipynb  imprinting.2.ipynb  imprinting.3.ipynb  imprinting.4.ipynb  imprinting.5.ipynb  imprinting.6.ipynb  inspect_cpgs.sh  list_variants.sh  recomb_blocks_methylation.csv  recombination.ipynb  recombination.py  t0001-10.1080_15592294.2022.2091815.csv  trio.ipynb
src/tapestry_tools/: __init__.py  add_locus.py  call_imprinted_loci.py  clean_coords.py  compute_delta_methylation.py  compute_methylation_at_given_loci.py  get_id_to_paths.py  get_palladium_prefixes.py  get_sample_metadata.py  get_samples_and_paths.py  imprinting.py  liftover.py  methylation.py  prefix_columns.py  read_data.py  tile.py  version_sort.py  write_data.py
