[project]
name = "tapestry-tools"
version = "0.1.0"
description = "A suite of bioinformatics tools for tapestry analysis"
readme = "README.md"
authors = [
    { name = "petermchale", email = "peter.thomas.mchale@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "bioframe>=0.8.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "matplotlib-venn>=1.1.2",
    "openpyxl>=3.1.5",
    "polars>=1.36.1",
    "pyarrow>=22.0.0",
    "rich-argparse>=1.7.2",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
# Command Name            = "PythonFile:Function"
call-imprinted-loci       = "tapestry_tools.call_imprinted_loci:main"
compute-delta-methylation = "tapestry_tools.compute_delta_methylation:main"
compute-methylation-loci  = "tapestry_tools.compute_methylation_at_given_loci:main"
